--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
         </div>
     </div>
 
+    <!-- Crop Tool Modal (In-page Popup) -->
+    <div id="cropModal" class="crop-modal">
+        <div class="crop-modal-container">
+            <header class="crop-modal-header">
+                <h3>เครื่องมือตัดแยกส่วนไฟล์</h3>
+                <button id="closeCropModal" class="close-modal-btn">&times;</button>
+            </header>
+            <div class="crop-modal-body">
+                <iframe id="cropIframe" src="about:blank"></iframe>
+            </div>
+        </div>
+    </div>
+
     <!-- Firebase SDK -->
     <script type="module" src="app.js"></script>
 </body>
