--- a/decut.html
+++ b/decut.html
@@ -524,7 +524,7 @@
                         // 4. Copy COMPLETELY FULL URL to clipboard
                         const fullUrl = window.location.origin + window.location.pathname + newHash;
                         try {
-                            await navigator.clipboard.writeText(fullUrl);
+                            await navigator.clipboard.writeText('✅เสร็จแล้ว!\nเข้าประกอบไฟล์ด้วยตัวเองที่นี่:\n' + fullUrl);
                         } catch (err) {
                             console.error('Failed to copy: ', err);
                         }
