--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         </div>
     </div>
 
+    <div id="copyToast" class="copy-toast">คัดลอกเรียบร้อย!</div>
     <!-- Firebase SDK -->
     <script type="module" src="app.js"></script>
 </body>
